Use `ConcurrentLruCache` in `PersistentPropertyPathFactory`.
Closes: #3493